--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,29 @@
 {
-       "version": 2,
-       "builds": [
-         {
-           "src": "public/index.html",
-           "use": "@vercel/static"
-         },
-         {
-           "src": "api/**/*.js",
-           "use": "@vercel/node"
-         }
-       ],
-       "routes": [
-         {
-           "src": "/api/(.*)",
-           "dest": "/api/$1"
-         },
-         {
-           "src": "/(.*)",
-           "dest": "/public/index.html"
-         }
-       ]
-     }
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/public/index.html"
+    }
+  ]
+}
