--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "public/index.html",
+      "src": "public/**",
       "use": "@vercel/static"
     },
     {
@@ -18,12 +18,6 @@
     {
       "src": "/(.*)",
       "dest": "/public/index.html"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/public/index.html"
     }
   ]
 }
