--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "patria-nueva",
-  "version": "1.0.0",
-  "homepage": "https://patria-nueva.vercel.app",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom=react-dom": "^18.2.0",
-    "axios": "^1.6.7",
-    "tailwindcss": "^3.4.1"
-  }
-}
+       "name": "patria-nueva",
+       "version": "1.0.0",
+       "homepage": "https://patria-nueva.vercel.app"
+     }
